--- a/main.html
+++ b/main.html
@@ -251,8 +251,8 @@
   </div>
 
   <script>
-    const CSV_PUBLISHED_URL = 'YOUR_PUBLISHED_CSV_LINK';
-    const GOOGLE_SHEET_EMBED = 'YOUR_GOOGLE_SHEET_EMBED_URL';
+    const CSV_PUBLISHED_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSU1mKSTrN4AAcBDqR9_47wY8T9f2GR-SlO8WAwwQ8BMosWoFmxVkzpuRCpDn7CuRXIujgIM2ObKHjm/pub?gid=0&single=true&output=csv';
+    const GOOGLE_SHEET_EMBED = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSU1mKSTrN4AAcBDqR9_47wY8T9f2GR-SlO8WAwwQ8BMosWoFmxVkzpuRCpDn7CuRXIujgIM2ObKHjm/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false';
     document.getElementById('sheetFrame').src = GOOGLE_SHEET_EMBED;
 
     function parseCSV(text) {
